Fix description wrap

--- a/src/main/resources/com/cloudbees/plugins/credentials/common/card.css
+++ b/src/main/resources/com/cloudbees/plugins/credentials/common/card.css
@@ -52,6 +52,7 @@
     margin-top: 0.1875rem;
     font-size: var(--font-size-xs);
     color: var(--text-color-secondary);
+    word-break: break-all;
 
     a {
         display: inline-flex;
